// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders 1`] = `
<div>
  <img
    alt="something"
    data-crop="x=0, y=0, width=100, height=100"
  />
</div>
`;

exports[`Renders with style 1`] = `
<div>
  <img
    alt="something"
    data-crop="x=50, y=50, width=50, height=50"
    style="margin: 3px;"
  />
</div>
`;
